# pm-harness

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEMO.md  DISTILLER_ARCHITECTURE.md  FINDINGS.md  NOTICE.md  README.md  RELEASING.md  pyproject.toml
harness/: __init__.py  _exec.py  autobudget.py  checkpoints.py  cli.py  command_policy.py  command_store.py  config.py  context_budget.py  conversation.py  diag.py  doctor.py  edit_engines.py  eval_cmd.py  git_provision.py  keys.py  mcp_client.py  mcp_http_client.py  mcp_manager.py  memory_store.py  model_fetch.py  model_visibility.py  pilot.py  providers.py  pty_manager.py  registry_wizard.py  rule_store.py  schedule_cli.py  schedule_core.py  schedule_store.py  scheduler.py  server.py  session.py  sessions.py  skill_distiller.py  skill_store.py  state.py  text_clean.py  vision.py  web_tools.py  (+3 more)
pmharness/: __init__.py  analysis_bench.py  analysis_bench_runner.py  battery.py  bridge.py  catalog.json  episode.py  episode_battery.py  episode_s4.py  episode_v2.py  episode_v2_runner.py  intent.py  ledger.py  reasoning.py  registry.py  runner.py  runner_multiturn.py  runner_s4.py  runner_v2.py  scoring.py  scoring_multiturn.py  scoring_v2.py
results/: ANALYSIS_ACCURACY_RESULTS.md  STAGE2_RESULTS.md  STAGE3_5_FIELD_RESULTS.md  STAGE3_5_RESULTS.md  STAGE3_RESULTS.md
scripts/: build_universal.sh  harness_gui.sh  release.sh  run_eval.py
tests/: conftest.py  test_adapter_label.py  test_agent_tools.py  test_analysis_bench.py  test_anthropic_native.py  test_apply_patch.py  test_auto.py  test_autobudget.py  test_cancellable_command.py  (+91 more)
(+55 files in other folders)
