[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-harness"
version = "0.1.0"
description = "Research rig: which LLMs can drive Puppetmaster as a native harness layer"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Puppetmaster is required to execute swarm intents (the bridge). Installed
# editable from the local checkout in dev; not pinned here to avoid coupling
# the research rig to a PyPI release of an internal tool.
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["pmharness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
